@@ -1,5 +1,14 @@
 2012-08-22  Guillaume Lazzara  <z@lrde.epita.fr>
 
+	Add Singh algorithm.
+
+	* scribo/binarization/internal/singh_formula.hh,
+	* scribo/binarization/internal/singh_functor.hh,
+	* scribo/binarization/singh.hh,
+	* src/binarization/singh.cc: New.
+
+2012-08-22  Guillaume Lazzara  <z@lrde.epita.fr>
+
 	Make the area value depends on the first scale ratio.
 
 	* scribo/binarization/sauvola_ms.hh: Change area ranges.
